fix(slider): edit overflow

--- a/src/form-coms/slider/runtime.less
+++ b/src/form-coms/slider/runtime.less
@@ -1,3 +1,7 @@
 .inputCol {
   padding-left: 5px;
 }
+
+.antSliderHorizontal {
+  overflow: visible;
+}
